# better-log-viewer

./: CHANGELOG.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: build.yml  release.yml
scripts/: release.sh
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
